...
    <string name="today_hi">Hi,</string>
    <string name="today_what_you_gonna_do_today">What you gonna do today?</string>
    <string name="todo_list_title_undone">Undone</string>
    <string name="todo_list_title_done">Done</string>
    <string name="input_bar_label_todo">Todo</string>
    <string name="reminder_picker_title_select_time">Select time</string>
    <string name="deadline">Deadline</string>
    <string name="reminder">Reminder</string>
    <string name="task">Task</string>
    <plurals name="checklist_delete_confirm_message">
        <item quantity="one">Are you sure you want to delete this checklist?</item>
        <item quantity="other">Are you sure you want to delete these checklists?</item>
    </plurals>
    <!--    <string name="checklist_delete_confirm_message_singular">Are you sure you want to delete this checklist?</string>-->
...
    <string name="checklist_name_will_be_deleted_forever">\"%1$s\" will be deleted forever!</string>
    <string name="input_bar_label_checklist_item">Content</string>
    <string name="title_repeat">Repeat</string>
    <string name="repeat_period">Repeat period</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="title_notes">Notes</string>
    <string name="add_list">Add List</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="settings_subtitle_notifications">Notifications</string>
    <string name="settings_options_allow_notification">Allow Notification</string>
    <string name="settings_notification_switch_description">App will send you notifications when you set a reminder</string>
    <string name="settings_options_theme">Theme</string>
...
    <string name="ok">OK</string>
    <string name="deny">Deny</string>
    <string name="dialog_title_permission_request">Permission Request</string>
    <string name="dev_by_sijayyx">Developed by Sijayyx</string>
    <string name="email_address" translatable="false">overloadedshrimp@outlook.com</string>
    <string name="action_custom">Custom</string>
    <string name="none">None</string>
    <string name="select_a_deadline">Select a deadline</string>
    <string name="select_a_time">Select a time</string>
    <string name="one_hour_later">One hour later</string>
    <string name="tomorrow_morning_09_00">Tomorrow morning (09:00)</string>
    <string name="every_day_singular">Every Day</string>
    <string name="every_week_singular">Every Week</string>
    <string name="every_month_singular">Every Month</string>
    <string name="every_year_singular">Every Year</string>
    <string name="option_day">Day</string>
    <string name="option_week">Week</string>
    <string name="option_month">Month</string>
    <string name="option_year">Year</string>
    <string name="option_today">Today</string>
    <string name="option_tomorrow">Tomorrow</string>
    <string name="option_in_two_days">In two days</string>
    <string name="option_next_week">Next week</string>
    <string name="deadline_xxx_days_ago">%1$d days ago</string>
    <string name="deadline_today">Today</string>
    <string name="deadline_tomorrow">Tomorrow</string>
    <string name="deadline_the_day_after_tomorrow">The day after tomorrow</string>
...
    <string name="color">Color</string>
    <string name="settings_options_language">Language</string>
    <string name="language_chinese" translatable="false">Chinese(简体中文)</string>
    <string name="language_english" translatable="false">English</string>
    <string name="edit_list_dialog_label_list">List name</string>
    <string name="dialog_title_add_new_list">Add New List</string>
    <string name="list_title_in_progress">In Progress</string>
    <string name="permission_request_text_line1">Hello, some permissions are needed to enable related app features.\n\n</string>
    <string name="permission_request_text_line2">"   - Alarm and reminders: Allow app to schedule an alarm of your reminder.\n"</string>
    <string name="permission_request_text_line3">"   - Notifications: Allow app to send you notifications.\n\n"</string>
    <string name="permission_request_text_line4"><![CDATA[If you deny, you can always enable it in [Settings -> Notifications].]]></string>
    <string name="date_formatter_full_date">yyyy MMM. dd EEEE, HH:mm</string>
    <string name="date_formatter_short_month_and_day">MMM. dd</string>
...
