...
                    onClick = {
                        setAddInputState()
                    },
                    modifier = Modifier
                        .padding(8.dp)
                        .semantics {
                            contentDescription = "Todo add FAB"
                        },
                    elevation = FloatingActionButtonDefaults.elevation(2.dp)
                ) {
                    Icon(Icons.Filled.Add, contentDescription = null)
                }
            }
...
                    )
                }
            },
            //发送键
            trailingAction = {
                IconButton(
                    modifier = Modifier.semantics { contentDescription = "Confirm Input Button" },
                    enabled = it,
                    onClick = {
                        Log.e(TAG, "Text input state = $textInputState")
                        when (textInputState) {
                            UiEnterState.Add -> {
                                confirmAddNewItem()
...
                DropdownIconTextButton(
                    selectedDeadline(),
                    icon = Icons.Filled.DateRange,
                    modifier = Modifier
                        .animateContentSize()
                        .semantics {
                            contentDescription = "Select deadline"
                        },
                    //可选的截止日期：无，今天，明天，后天，下周
                    menuItemList = mapOf(
                        stringResource(R.string.option_today) to TodoDeadline.Today.content,
                        stringResource(R.string.option_tomorrow) to TodoDeadline.Tomorrow.content,
                        stringResource(R.string.option_in_two_days) to TodoDeadline.InTwoDays.content,
...
                        stringResource(R.string.one_hour_later) to RemindOptions.OneHourLater.content,
                        stringResource(R.string.tomorrow_morning_09_00) to RemindOptions.TomorrowMorning.content,
                    ),
                    modifier = Modifier
                        .animateContentSize()
                        .semantics {
                            contentDescription = "Select reminder"
                        },
                )
            },
        )
    }
}
...

                            IconTextRow(
                                text = deadline,
                                hideIfEmpty = true,
                                icon = Icons.Filled.DateRange,
                                modifier = Modifier.semantics {
                                    contentDescription = "Deadline IconTextRow"
                                }
                            )

                            if (deadline.isNotEmpty())
                                Spacer(Modifier.padding(4.dp))

                            IconTextRow(
                                text = reminder,
                                hideIfEmpty = true,
                                icon = Icons.Filled.NotificationsActive,
                                modifier = Modifier.semantics {
                                    contentDescription = "Reminder IconTextRow"
                                }
                            )
                        }
                    }

                    //            Spacer(Modifier.weight(1f))
...
