...
        modifier = Modifier.Companion
            .fillMaxSize()
            .imePadding()
            .navigationBarsPadding()
            .semantics {
                isTraversalGroup = true
                contentDescription = "Bottom Input Bar"
            },
        contentAlignment = Alignment.Companion.BottomCenter
    ) {
        Scrim(
            color = Color.Companion.Black.copy(alpha = 0.5f),
            onDismissRequest = onDismiss,
...
                            errorIndicatorColor = Color.Companion.Transparent
                        ),
                        keyboardOptions = KeyboardOptions(imeAction = ImeAction.Companion.Done),
                        modifier = Modifier.Companion
                            .weight(1f)
                            .focusRequester(focusRequester)
                            .semantics { contentDescription = "Bottom Input Field" }
                            .animateContentSize(),
                    )
                    trailingAction(!textValue.isEmpty())
                }
                Row(
                    horizontalArrangement = Arrangement.SpaceEvenly,
...
                            contentDescription = null,
                            modifier = Modifier.size(32.dp)
                        )
                    }
                },
                bottomActions = {
                    DropdownIconTextButton("Plan", icon = Icons.Filled.Checklist)
                    DropdownIconTextButton("Deadline", icon = Icons.Filled.DateRange)
                    DropdownIconTextButton("Reminder", icon = Icons.Filled.AddAlert)
                },
                onDismiss = {}
            )
        }
...
